arrange the code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
 ﻿target_sources (implement-shell-ranelbe PRIVATE "main.cpp" 
-											    "Shell.cpp")
+											    "Shell.cpp"
+												"DirectoryManager.cpp"
+												"JobsManager.cpp"
+												"InputParser.cpp")
