improve redirection implementation and add pipes functionality

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@
 												"DirectoryManager.cpp"
 												"JobsManager.cpp"
 												"InputParser.cpp"
-												"RedirectionsManager.cpp")
+												"RedirectionsManager.cpp"
+												"Pipes.cpp")
